add then hihgh latency middeware
